--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: python
 cache: pip
 python:
@@ -7,11 +6,18 @@ python:
   - '3.6'
 
 env:
+  global:
+    CLAMAV_SOCKET: 'unix:///var/run/clamav/clamd.ctl'
+
   matrix:
   - DJANGO="django>=1.10.1,<1.11.0"
   - DJANGO="django>=1.11.0,<1.12.0"
 
 script:
+  - sudo apt-get install clamav-daemon clamav-freshclam clamav-unofficial-sigs
+  - sudo freshclam --verbose
+  - sudo service clamav-daemon start
+
   - pip -q install $DJANGO
   - pip -q install -r test_requirements.txt
   - pip install -e .
