--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,16 @@ env:
   matrix:
   - DJANGO="django>=1.10.1,<1.11.0"
   - DJANGO="django>=1.11.0,<1.12.0"
+  - DJANGO="django>=2.0,<2.1"
+  - DJANGO="django>=2.1,<2.2"
+  - DJANGO="django>=2.2,<2.3"
+
+matrix:
+  exclude:
+    - python: '3.4'
+      env: DJANGO="django>=2.1,<2.2"
+    - python: '3.4'
+      env: DJANGO="django>=2.2,<2.3"
 
 script:
   - sudo apt-get install clamav-daemon clamav-freshclam clamav-unofficial-sigs
