--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,10 +7,12 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.9", "3.10"]
-        django-version: ["1.11", "2.2", "3.2"]
+        django-version: ["1.11", "2.2", "3.2", "4.2"]
         exclude:
           - python-version: "3.10"
             django-version: "1.11"
+          - python-version: "3.7"
+            django-version: "4.2"
 
     steps:
       - uses: actions/checkout@v3
