--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,11 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.9", "3.10"]
+        python-version: ["3.7", "3.9", "3.10", "3.11"]
         django-version: ["1.11", "2.2", "3.2", "4.2"]
         exclude:
           - python-version: "3.10"
             django-version: "1.11"
+          - python-version: "3.11"
+            django-version: "1.11"
+
           - python-version: "3.7"
             django-version: "4.2"
 
